export enum RewardType {
  MILEAGE = 'MILEAGE',
  ITEM = 'ITEM',
  NEXON_CASH = 'NEXON_CASH',
}
