Table users {
  id integer [primary key]
  role varchar
  created_at timestamp
  updated_at timestamp
}

Table events {
  id integer [primary key]
  name varchar
  event_condition_id integer
  created_at timestamp
  updated_at timestamp
}

Table event_conditions {
  id integer [primary key]
  category varchar    // e.g., LOGIN, INVITE
  type varchar        // e.g., DAYS, COUNT
  operator varchar    // e.g., >=, =
  value integer       // e.g., 3
  unit varchar        // e.g., days, friends
  created_at timestamp
  updated_at timestamp
  indexes {
    (category, type, operator, value, unit) [unique, name: "event_condition"]
  }
}

Table event_request {
  id integer [primary key]
  user_id integer
  event_id integer
  grant_status boolean
  created_at timestamp
  Indexes {
    (user_id, event_id) [unique, name: "user_event_requested"]
  }
}

Table rewards {
  id integer [primary key]
  event_id integer
  reward_type_id integer
  amount integer
  created_at timestamp
  updated_at timestamp
}

Table reward_types {
  id integer [primary key]
  type varchar         // e.g., POINT, ITEM, COUPON
  created_at timestamp
}

Table reward_logs {
  id integer [primary key]
  reward_id integer
  editor_id integer
  action varchar          // CREATED, UPDATED, DELETED
  previous_value json     // 변경 전 데이터 (nullable)
  current_value json      // 변경 후 데이터
  changed_fields varchar  // 예: "amount,reward_type_id"
  created_at timestamp
}

Table reward_grant_logs {
  id integer [primary key]
  user_id integer
  reward_id integer
  status varchar       // e.g., GRANTED, FAILED
  created_at timestamp
}


Ref: event_request.user_id > users.id
Ref: event_request.event_id > events.id
Ref: events.event_condition_id > event_conditions.id
Ref: events.id > rewards.event_id
Ref: rewards.reward_type_id > reward_types.id
Ref: reward_grant_logs.reward_id > rewards.id
Ref: reward_grant_logs.user_id > users.id
Ref: reward_logs.reward_id > rewards.id
Ref: reward_logs.editor_id > users.id